fix searchbar on mobile

--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   transition: max-width 0.2s ease-in-out;
 
-  &:focus-within {
+  &:has(.label:focus-within) {
     max-width: 500px;
 
     .listBody {
@@ -14,21 +14,65 @@
   }
 
   @media (max-width: 768px) {
-    max-width: 42px;
+    max-width: 44px;
+  }
+
+  @media (max-width: 576px) {
+    &:has(.label:focus-within) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      max-width: none;
+      background-color: rgba(0, 0, 0, 0.9);
+      padding: 10px;
+
+      .closeButton {
+        display: block;
+      }
+    }
   }
 }
 
-.label {
-  background-color: rgb(33, 37, 41);
+@media (max-width: 576px) {
+  body:has(.label:focus-within) {
+    overflow: hidden;
+  }
+}
+
+.form {
+  display: flex;
+}
+
+.formControl {
+  display: flex;
+  align-items: center;
+  background-color: rgb(37, 37, 37);
   border: 1px solid rgb(80, 80, 80);
+  border-radius: 22px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.label {
+  width: 100%;
   display: flex;
   align-items: center;
   height: 44px;
   box-sizing: border-box;
-  border-radius: 5px;
+}
 
-  &:focus-within {
-    border-radius: 5px 5px 0 0;
+.clearButton {
+  margin: 0 5px;
+  min-width: 25px;
+  cursor: pointer;
+
+  svg {
+    vertical-align: middle;
+    fill: white;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -50,7 +94,7 @@
   height: 100%;
   box-sizing: border-box;
   margin: 0;
-  padding: 13px 10px;
+  padding: 13px 0 13px 10px;
   color: white;
   font-size: 13px;
   line-height: 1;
@@ -65,15 +109,21 @@
   position: absolute;
   display: none;
   z-index: 200;
-  background-color: rgb(33, 37, 41);
-  top: 44px;
+  background-color: rgb(37, 37, 37);
+  top: 49px;
   left: 0;
   width: 100%;
   box-sizing: border-box;
   overflow: hidden;
   border: 1px solid rgb(80, 80, 80);
-  border-top: none;
-  border-radius: 0 0 5px 5px;
+  border-radius: 20px;
+
+  @media (max-width: 576px) {
+    background-color: transparent;
+    top: 60px;
+    padding: 10px;
+    border: none;
+  }
 }
 
 .list {
@@ -100,5 +150,17 @@
 
   @media (max-width: 576px) {
     font-size: 12px;
+  }
+}
+
+.closeButton {
+  display: none;
+
+  @media (max-width: 576px) {
+    margin: 10px;
+    padding: 0;
+    border: none;
+    font-size: 12px;
+    color: white;
   }
 }
